[DURACOM-195] fix issue with logo on small screens
(cherry picked from commit bff93a08471240e107704cd7c525ac747b0c93b6)

--- a/src/themes/dspace/app/header/header.component.scss
+++ b/src/themes/dspace/app/header/header.component.scss
@@ -1,7 +1,16 @@
 :host {
   #main-site-header {
-    height: var(--ds-header-height);
+    min-height: var(--ds-header-height);
+
+    @include media-breakpoint-up(md) {
+      height: var(--ds-header-height);
+    }
+
     background-color: var(--ds-header-bg);
+
+    &-container {
+      min-height: var(--ds-header-height);
+    }
   }
 
   img#header-logo {
